--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
     sdk: ">=3.1.0-262.2.beta <4.0.0"
 
 dependencies:
+    bot_toast: ^4.1.3
     flutter:
         sdk: flutter
+    flutter_bloc: ^8.1.4
     google_fonts: ^6.1.0
 
 dev_dependencies:
