--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
     bot_toast: ^4.1.3
+    crypto: ^3.0.3
     flutter:
         sdk: flutter
     flutter_bloc: ^8.1.4
