--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
         sdk: flutter
     flutter_bloc: ^8.1.4
     google_fonts: ^6.1.0
+    intl: ^0.19.0
+    shared_preferences: ^2.2.3
 
 dev_dependencies:
     flutter_test:
