--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
     bot_toast: ^4.1.3
     crypto: ^3.0.3
+    firebase_messaging: ^14.7.19
     flutter:
         sdk: flutter
     flutter_bloc: ^8.1.4
